navigation and about section

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -22,5 +22,8 @@
   "WHY_PHRASE": "Sponsoring a horse is a wonderful way to make a difference in the lives of these majestic animals. Your financial support allows us to cover the costs of feeding, medical care, and housing, ensuring that each horse has a dignified and healthy life.",
   "MEET_HORSES": "Meet Our Horses",
   "MEET_PHRASE": "Every horse that comes to us has a unique story. We invite you to meet our residents and choose the one that inspires you through our sponsorship program. From brave survivors to charming stablemates, each horse has a special place in our heart and we're sure it will have a special place in yours, too.",
-  "OUR_HORSES": "Our horses"
+  "OUR_HORSES": "Our horses",
+  "NO_ACTIVITIES": "There are no activities yet",
+  "NEW_ACTIVITY": "New Activity",
+  "MY_ACTIVITIES": "My activities"
 }
