--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -22,6 +22,13 @@
   "WHY_PHRASE": "Apadrinar un caballo es una forma maravillosa de marcar la diferencia en la vida de estos majestuosos animales. Tu apoyo financiero nos permite cubrir los costos de alimentación, atención médica, y alojamiento, asegurando que cada caballo tenga una vida digna y saludable.",
   "MEET_HORSES": "Conoce a Nuestros Caballos",
   "MEET_PHRASE": "Cada caballo que llega a nosotros tiene una historia única. Te invitamos a conocer a nuestros residentes y elegir al que te inspire a través de nuestro programa de apadrinamiento. Desde valientes supervivientes hasta encantadores compañeros de establo, cada caballo tiene un lugar especial en nuestro corazón y estamos seguros de que también lo tendrá en el tuyo.",
-  "OUR_HORSES": "Nuestros Caballos"
+  "OUR_HORSES": "Nuestros Caballos",
+  "NO_ACTIVITIES": "No hay actividades aún",
+  "NEW_ACTIVITY": "Nueva Actividad",
+  "MY_ACTIVITIES": "Mis actividades",
+  "ACTIVITY_TITLE": "Únete a nuestras actividades",
+  "ACTIVITY_PHRASE": "También ofrecemos otros servicios: clases de equitación, aprendizaje con refuerzos positivos, turismo ecuestre, puesto en forma del caballo... ¡O ayuda participando como voluntario! Mándanos un correo si estás interesado o interesada.",
+  "CONTACT_US": "¡CONTÁCTANOS!",
+  "SEE_ACTIVITIES": "Ver Actividades"
   
 }
