maps and delete images

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -29,6 +29,8 @@
   "ACTIVITY_TITLE": "Únete a nuestras actividades",
   "ACTIVITY_PHRASE": "También ofrecemos otros servicios: clases de equitación, aprendizaje con refuerzos positivos, turismo ecuestre, puesto en forma del caballo... ¡O ayuda participando como voluntario! Mándanos un correo si estás interesado o interesada.",
   "CONTACT_US": "¡CONTÁCTANOS!",
-  "SEE_ACTIVITIES": "Ver Actividades"
+  "SEE_ACTIVITIES": "Ver Actividades",
+  "JOIN_ACTIVITIES": "Participa en nuestros actividades",
+  "DESCRIPTION_ACTIVITIES": "Disfruta y aprende con ellos"
   
 }
